--- a/index.html
+++ b/index.html
@@ -13,7 +13,128 @@
       <h1>Summary On BTW Edutech</h1>
       <h5>Bagus Perwira | XI RPL 2 | 05</h5>
     </header>
-
+    <main>
+      <section id="about">
+        <h2>Who I Am?</h2>
+        <p>
+          I'm Bagus Perwira! I study at SMK TI Bali Global Denpasar, majoring in
+          Software Engineering (RPL), Likes Making Web & Application especially
+          the the bad ones. I enjoy experimenting with new technologies and
+          often build quirky apps just for fun, like my fruits pop-up app. I'm
+          always learning and looking for creative ways to improve my skills.
+          Whether it’s working on personal projects or collaborating with
+          others, I’m excited to push the limits of what I can create.
+        </p>
+      </section>
+      <section id="tools">
+        <h2>Tools</h2>
+        <p>Here are some of the tools I use to bring my projects to life:</p>
+        <div class="tools-list">
+          <div class="tool">
+            <img
+              src="https://cdn.simpleicons.org/html5/e34f26"
+              alt="HTML Logo"
+              class="tool-logo"
+            />
+            <p><strong>HTML</strong></p>
+          </div>
+          <div class="tool">
+            <img
+              src="https://cdn.simpleicons.org/css3/1572b6"
+              alt="CSS Logo"
+              class="tool-logo"
+            />
+            <p><strong>CSS</strong></p>
+          </div>
+          <div class="tool">
+            <img
+              src="https://cdn.simpleicons.org/javascript/f7df1e"
+              alt="JavaScript Logo"
+              class="tool-logo"
+            />
+            <p><strong>JavaScript</strong></p>
+          </div>
+          <div class="tool">
+            <img
+              src="https://cdn.simpleicons.org/react/61dafb"
+              alt="React Logo"
+              class="tool-logo"
+            />
+            <p><strong>React</strong></p>
+          </div>
+          <div class="tool">
+            <img
+              src="https://cdn.simpleicons.org/typescript/3178c6"
+              alt="TypeScript Logo"
+              class="tool-logo"
+            />
+            <p><strong>TypeScript</strong></p>
+          </div>
+          <div class="tool">
+            <img
+              src="https://cdn.simpleicons.org/tailwindcss/38b2ac"
+              alt="Tailwind CSS Logo"
+              class="tool-logo"
+            />
+            <p><strong>Tailwind CSS</strong></p>
+          </div>
+          <div class="tool">
+            <img
+              src="https://cdn.simpleicons.org/go/00ADD8"
+              alt="Go Logo"
+              class="tool-logo"
+            />
+            <p><strong>Go</strong></p>
+          </div>
+          <div class="tool">
+            <img
+              src="https://cdn.simpleicons.org/git/f34f29"
+              alt="Git Logo"
+              class="tool-logo"
+            />
+            <p><strong>Git</strong></p>
+          </div>
+          <div class="tool">
+            <img
+              src="https://cdn.simpleicons.org/docker/2496ed"
+              alt="Docker Logo"
+              class="tool-logo"
+            />
+            <p><strong>Docker</strong></p>
+          </div>
+          <div class="tool">
+            <img
+              src="https://cdn.simpleicons.org/postman/FF6C37"
+              alt="Postman Logo"
+              class="tool-logo"
+            />
+            <p><strong>Postman</strong></p>
+          </div>
+          <div class="tool">
+            <img
+              src="https://cdn.simpleicons.org/nginx/009639"
+              alt="Nginx Logo"
+              class="tool-logo"
+            />
+            <p><strong>Nginx</strong></p>
+          </div>
+          <div class="tool">
+            <img
+              src="https://cdn.simpleicons.org/railway/2F2A39"
+              alt="Railway Logo"
+              class="tool-logo"
+            />
+            <p><strong>Railway</strong></p>
+          </div>
+        </div>
+      </section>
+      <section id="tables">
+        <h2>Summary Task</h2>
+      </section>
+      <section id="projects">
+        <h2>Projects</h2>
+      </section>
+    </main>
     <script type="module" src="src/js/global-script.js"></script>
   </body>
 </html>
