--- a/index.html
+++ b/index.html
@@ -18,17 +18,17 @@
         <h2>Who I Am?</h2>
         <p>
           I'm Bagus Perwira! I study at SMK TI Bali Global Denpasar, majoring in
-          Software Engineering (RPL), Likes Making Web & Application especially
-          the the bad ones. I enjoy experimenting with new technologies and
-          often build quirky apps just for fun, like my fruits pop-up app. I'm
-          always learning and looking for creative ways to improve my skills.
-          Whether it’s working on personal projects or collaborating with
-          others, I’m excited to push the limits of what I can create.
+          Software Engineering (RPL), I like making web & applications,
+          especially the bad ones. I enjoy experimenting with new technologies
+          and often build quirky apps just for fun, like my fruits pop-up app.
+          I'm always learning and looking for creative ways to improve my
+          skills. Whether it’s working on personal projects or collaborating
+          with others, I’m excited to push the limits of what I can create.
         </p>
       </section>
       <section id="tools">
         <h2>Tools</h2>
-        <p>Here are some of the tools I use to bring my projects to life:</p>
+        <p>Here are some of the tools I use when internship on BTW Edutech:</p>
         <div class="tools-list">
           <div class="tool">
             <img
@@ -130,9 +130,171 @@
       </section>
       <section id="tables">
         <h2>Summary Task</h2>
+        <section id="juli">
+          <h2>Summary of Activities in July</h2>
+          <table>
+            <thead>
+              <tr>
+                <th>NO</th>
+                <th>Activity</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td>1</td>
+                <td>Release Ceremony for Internship Students and Briefing</td>
+              </tr>
+              <tr>
+                <td>2</td>
+                <td>Reviewing Algorithms and Data Structures</td>
+              </tr>
+              <tr>
+                <td>3</td>
+                <td>
+                  Learning to use MongoDB and implementing clean architecture in
+                  Golang
+                </td>
+              </tr>
+            </tbody>
+          </table>
+        </section>
+
+        <section id="agustus">
+          <h2>Summary of Activities in August</h2>
+          <table>
+            <thead>
+              <tr>
+                <th>NO</th>
+                <th>Activity</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td>1</td>
+                <td>
+                  Creating a Retail Store API project using Golang and MongoDB
+                </td>
+              </tr>
+              <tr>
+                <td>2</td>
+                <td>Testing Retail Store API using Postman</td>
+              </tr>
+              <tr>
+                <td>3</td>
+                <td>
+                  Preparing for the final project URL Shortener as a group
+                </td>
+              </tr>
+              <tr>
+                <td>4</td>
+                <td>
+                  Presentation on progress of the final project preparation
+                </td>
+              </tr>
+            </tbody>
+          </table>
+        </section>
+
+        <section id="september">
+          <h2>Summary of Activities in September</h2>
+          <table>
+            <thead>
+              <tr>
+                <th>NO</th>
+                <th>Activity</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td>1</td>
+                <td>Creating API for the Final Project URL Shortener</td>
+              </tr>
+              <tr>
+                <td>2</td>
+                <td>Presentation on the progress of the final project</td>
+              </tr>
+            </tbody>
+          </table>
+        </section>
+
+        <section id="oktober">
+          <h2>Summary of Activities in October</h2>
+          <table>
+            <thead>
+              <tr>
+                <th>NO</th>
+                <th>Activity</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td>1</td>
+                <td>
+                  Continuing to create the API for the Final Project URL
+                  Shortener using Docker
+                </td>
+              </tr>
+              <tr>
+                <td>2</td>
+                <td>Presentation on the progress of the final project</td>
+              </tr>
+            </tbody>
+          </table>
+        </section>
+
+        <section id="november">
+          <h2>Summary of Activities in November</h2>
+          <table>
+            <thead>
+              <tr>
+                <th>NO</th>
+                <th>Activity</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td>1</td>
+                <td>
+                  Continuing to create the API for the Final Project URL
+                  Shortener using Docker
+                </td>
+              </tr>
+              <tr>
+                <td>2</td>
+                <td>Presentation on the progress of the final project</td>
+              </tr>
+            </tbody>
+          </table>
+        </section>
+
+        <section id="desember">
+          <h2>Summary of Activities in December</h2>
+          <table>
+            <thead>
+              <tr>
+                <th>NO</th>
+                <th>Activity</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td>1</td>
+                <td>
+                  Continuing to create the API for the Final Project URL
+                  Shortener using Docker
+                </td>
+              </tr>
+              <tr>
+                <td>2</td>
+                <td>Final project presentation</td>
+              </tr>
+            </tbody>
+          </table>
+        </section>
       </section>
       <section id="projects">
         <h2>Projects</h2>
+
       </section>
     </main>
     <script type="module" src="src/js/global-script.js"></script>
