testing swiss web design

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
   </head>
   <body>
     <header>
-      <h1>Summary On BTW Edutech</h1>
-      <h5>Bagus Perwira | XI RPL 2 | 05</h5>
+      <h1 class="title">Summary On BTW Edutech</h1>
+      <h6 class="fullname">Bagus Perwira | XI RPL 2 | 05</h6>
     </header>
     <main>
       <section id="about">
@@ -294,7 +294,6 @@
       </section>
       <section id="projects">
         <h2>Projects</h2>
-
       </section>
     </main>
     <script type="module" src="src/js/global-script.js"></script>
