styling on title and  tools

--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
   </head>
   <body>
     <header>
-      <h1 class="title">Summary On BTW Edutech</h1>
+      <h1 class="title">
+        Summary On <span class="btw-title">BTW</span>
+        <span class="edutech-title">Edutech</span>
+      </h1>
       <h6 class="fullname">Bagus Perwira | XI RPL 2 | 05</h6>
     </header>
     <main>
@@ -28,7 +31,7 @@
       </section>
       <section id="tools">
         <h2>Tools</h2>
-        <p>Here are some of the tools I use when internship on BTW Edutech:</p>
+        <p>Here are some of the tools I use when internship on BTW Edutech</p>
         <div class="tools-list">
           <div class="tool">
             <img
