some changes, idk i forgot

--- a/index.html
+++ b/index.html
@@ -18,15 +18,16 @@
     </header>
     <main>
       <section id="about">
-        <h2>Who I Am?</h2>
+        <h2 class="subtitle">Who Am I?</h2>
         <p>
           I'm Bagus Perwira! I study at SMK TI Bali Global Denpasar, majoring in
-          Software Engineering (RPL), I like making web & applications,
-          especially the bad ones. I enjoy experimenting with new technologies
-          and often build quirky apps just for fun, like my fruits pop-up app.
-          I'm always learning and looking for creative ways to improve my
-          skills. Whether it’s working on personal projects or collaborating
-          with others, I’m excited to push the limits of what I can create.
+          Software Engineering (RPL). I enjoy making web and desktop
+          applications especially the quirky, unconventional ones. I love
+          experimenting with new technologies and often build fun, quirky apps,
+          like my fruits pop-up app. I'm always eager to learn and find creative
+          ways to improve my skills. Whether I'm working on personal projects or
+          collaborating with others, I'm excited to push the limits of what I
+          can create.
         </p>
       </section>
       <section id="tools">
