--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <main>
       <section id="about">
         <h2 class="subtitle">Who Am I?</h2>
-        <p>
+        <p class="whoami-paragraph">
           I'm Bagus Perwira! I study at SMK TI Bali Global Denpasar, majoring in
           Software Engineering (RPL). I enjoy making web and desktop
           applications especially the quirky, unconventional ones. I love
@@ -30,11 +30,22 @@
           can create.
         </p>
       </section>
+      <section id="company">
+        <h2 class="subtitle">Company</h2>
+        <p class="whoami-paragraph">
+          BTW Edutech is an Indonesian digital startup that focuses on education
+          services. BTW Edutech is a technology-based education ecosystem
+          developed by PT Bina Taruna Wiratama that offers an innovative
+          academic training system to help users achieve their career goals.
+        </p>
+      </section>
       <section id="tools">
-        <h2>Tools</h2>
-        <p>Here are some of the tools I use when internship on BTW Edutech</p>
+        <h2 class="subtitle">Tools</h2>
+        <p class="whoami-paragraph">
+          Here are some of the tools I use when internship on BTW Edutech
+        </p>
         <div class="tools-list">
-          <div class="tool">
+          <div class="tool box">
             <img
               src="https://cdn.simpleicons.org/html5/e34f26"
               alt="HTML Logo"
@@ -42,7 +53,7 @@
             />
             <p><strong>HTML</strong></p>
           </div>
-          <div class="tool">
+          <div class="tool box">
             <img
               src="https://cdn.simpleicons.org/css3/1572b6"
               alt="CSS Logo"
@@ -50,7 +61,7 @@
             />
             <p><strong>CSS</strong></p>
           </div>
-          <div class="tool">
+          <div class="tool box">
             <img
               src="https://cdn.simpleicons.org/javascript/f7df1e"
               alt="JavaScript Logo"
@@ -58,7 +69,7 @@
             />
             <p><strong>JavaScript</strong></p>
           </div>
-          <div class="tool">
+          <div class="tool box">
             <img
               src="https://cdn.simpleicons.org/react/61dafb"
               alt="React Logo"
@@ -66,7 +77,7 @@
             />
             <p><strong>React</strong></p>
           </div>
-          <div class="tool">
+          <div class="tool box">
             <img
               src="https://cdn.simpleicons.org/typescript/3178c6"
               alt="TypeScript Logo"
@@ -74,7 +85,7 @@
             />
             <p><strong>TypeScript</strong></p>
           </div>
-          <div class="tool">
+          <div class="tool box">
             <img
               src="https://cdn.simpleicons.org/tailwindcss/38b2ac"
               alt="Tailwind CSS Logo"
@@ -82,7 +93,7 @@
             />
             <p><strong>Tailwind CSS</strong></p>
           </div>
-          <div class="tool">
+          <div class="tool box">
             <img
               src="https://cdn.simpleicons.org/go/00ADD8"
               alt="Go Logo"
@@ -90,7 +101,7 @@
             />
             <p><strong>Go</strong></p>
           </div>
-          <div class="tool">
+          <div class="tool box">
             <img
               src="https://cdn.simpleicons.org/git/f34f29"
               alt="Git Logo"
@@ -98,7 +109,7 @@
             />
             <p><strong>Git</strong></p>
           </div>
-          <div class="tool">
+          <div class="tool box">
             <img
               src="https://cdn.simpleicons.org/docker/2496ed"
               alt="Docker Logo"
@@ -106,7 +117,7 @@
             />
             <p><strong>Docker</strong></p>
           </div>
-          <div class="tool">
+          <div class="tool box">
             <img
               src="https://cdn.simpleicons.org/postman/FF6C37"
               alt="Postman Logo"
@@ -114,7 +125,7 @@
             />
             <p><strong>Postman</strong></p>
           </div>
-          <div class="tool">
+          <div class="tool box">
             <img
               src="https://cdn.simpleicons.org/nginx/009639"
               alt="Nginx Logo"
@@ -122,7 +133,7 @@
             />
             <p><strong>Nginx</strong></p>
           </div>
-          <div class="tool">
+          <div class="tool box">
             <img
               src="https://cdn.simpleicons.org/railway/2F2A39"
               alt="Railway Logo"
@@ -130,174 +141,237 @@
             />
             <p><strong>Railway</strong></p>
           </div>
+          <div class="tool box">
+            <img
+              src="https://cdn.simpleicons.org/mysql/4479a1"
+              alt="MySQL Logo"
+              class="tool-logo"
+            />
+            <p><strong>MySQL</strong></p>
+          </div>
+          <div class="tool box">
+            <img
+              src="https://img.icons8.com/?size=100&id=9OGIyU8hrxW5&format=png&color=000000"
+              alt="VS Code Logo"
+              class="tool-logo"
+            />
+            <p><strong>VS Code</strong></p>
+          </div>
+          <div class="tool box">
+            <img
+              src="https://cdn-icons-png.flaticon.com/512/3063/3063583.png"
+              alt="Laptop Icon"
+              class="tool-logo"
+            />
+            <p><strong>Laptop</strong></p>
+          </div>
         </div>
       </section>
       <section id="tables">
-        <h2>Summary Task</h2>
-        <section id="juli">
-          <h2>Summary of Activities in July</h2>
-          <table>
-            <thead>
-              <tr>
-                <th>NO</th>
-                <th>Activity</th>
-              </tr>
-            </thead>
-            <tbody>
-              <tr>
-                <td>1</td>
-                <td>Release Ceremony for Internship Students and Briefing</td>
-              </tr>
-              <tr>
-                <td>2</td>
-                <td>Reviewing Algorithms and Data Structures</td>
-              </tr>
-              <tr>
-                <td>3</td>
-                <td>
-                  Learning to use MongoDB and implementing clean architecture in
-                  Golang
-                </td>
-              </tr>
-            </tbody>
-          </table>
-        </section>
+        <h2 class="subtitle">Summary Task</h2>
+        <section class="grid-container">
+          <section id="juli">
+            <h2>Summary of Activities in July</h2>
+            <table border="1" cellspacing="0" cellpadding="5" class="box">
+              <thead>
+                <tr>
+                  <th>NO</th>
+                  <th>Activity</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <td>1</td>
+                  <td>Release Ceremony for Internship Students and Briefing</td>
+                </tr>
+                <tr>
+                  <td>2</td>
+                  <td>Reviewing Algorithms and Data Structures</td>
+                </tr>
+                <tr>
+                  <td>3</td>
+                  <td>
+                    Learning to use MongoDB and implementing clean architecture
+                    in Golang
+                  </td>
+                </tr>
+              </tbody>
+            </table>
+          </section>
 
-        <section id="agustus">
-          <h2>Summary of Activities in August</h2>
-          <table>
-            <thead>
-              <tr>
-                <th>NO</th>
-                <th>Activity</th>
-              </tr>
-            </thead>
-            <tbody>
-              <tr>
-                <td>1</td>
-                <td>
-                  Creating a Retail Store API project using Golang and MongoDB
-                </td>
-              </tr>
-              <tr>
-                <td>2</td>
-                <td>Testing Retail Store API using Postman</td>
-              </tr>
-              <tr>
-                <td>3</td>
-                <td>
-                  Preparing for the final project URL Shortener as a group
-                </td>
-              </tr>
-              <tr>
-                <td>4</td>
-                <td>
-                  Presentation on progress of the final project preparation
-                </td>
-              </tr>
-            </tbody>
-          </table>
-        </section>
+          <section id="agustus">
+            <h2>Summary of Activities in August</h2>
+            <table border="1" cellspacing="0" cellpadding="5" class="box">
+              <thead>
+                <tr>
+                  <th>NO</th>
+                  <th>Activity</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <td>1</td>
+                  <td>
+                    Creating a Retail Store API project using Golang and MongoDB
+                  </td>
+                </tr>
+                <tr>
+                  <td>2</td>
+                  <td>Testing Retail Store API using Postman</td>
+                </tr>
+                <tr>
+                  <td>3</td>
+                  <td>
+                    Preparing for the final project URL Shortener as a group
+                  </td>
+                </tr>
+                <tr>
+                  <td>4</td>
+                  <td>
+                    Presentation on progress of the final project preparation
+                  </td>
+                </tr>
+              </tbody>
+            </table>
+          </section>
 
-        <section id="september">
-          <h2>Summary of Activities in September</h2>
-          <table>
-            <thead>
-              <tr>
-                <th>NO</th>
-                <th>Activity</th>
-              </tr>
-            </thead>
-            <tbody>
-              <tr>
-                <td>1</td>
-                <td>Creating API for the Final Project URL Shortener</td>
-              </tr>
-              <tr>
-                <td>2</td>
-                <td>Presentation on the progress of the final project</td>
-              </tr>
-            </tbody>
-          </table>
-        </section>
+          <section id="september">
+            <h2>Summary of Activities in September</h2>
+            <table border="1" cellspacing="0" cellpadding="5" class="box">
+              <thead>
+                <tr>
+                  <th>NO</th>
+                  <th>Activity</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <td>1</td>
+                  <td>Creating API for the Final Project URL Shortener</td>
+                </tr>
+                <tr>
+                  <td>2</td>
+                  <td>Presentation on the progress of the final project</td>
+                </tr>
+              </tbody>
+            </table>
+          </section>
 
-        <section id="oktober">
-          <h2>Summary of Activities in October</h2>
-          <table>
-            <thead>
-              <tr>
-                <th>NO</th>
-                <th>Activity</th>
-              </tr>
-            </thead>
-            <tbody>
-              <tr>
-                <td>1</td>
-                <td>
-                  Continuing to create the API for the Final Project URL
-                  Shortener using Docker
-                </td>
-              </tr>
-              <tr>
-                <td>2</td>
-                <td>Presentation on the progress of the final project</td>
-              </tr>
-            </tbody>
-          </table>
-        </section>
+          <section id="oktober">
+            <h2>Summary of Activities in October</h2>
+            <table border="1" cellspacing="0" cellpadding="5" class="box">
+              <thead>
+                <tr>
+                  <th>NO</th>
+                  <th>Activity</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <td>1</td>
+                  <td>
+                    Continuing to create the API for the Final Project URL
+                    Shortener using Docker
+                  </td>
+                </tr>
+                <tr>
+                  <td>2</td>
+                  <td>Presentation on the progress of the final project</td>
+                </tr>
+              </tbody>
+            </table>
+          </section>
 
-        <section id="november">
-          <h2>Summary of Activities in November</h2>
-          <table>
-            <thead>
-              <tr>
-                <th>NO</th>
-                <th>Activity</th>
-              </tr>
-            </thead>
-            <tbody>
-              <tr>
-                <td>1</td>
-                <td>
-                  Continuing to create the API for the Final Project URL
-                  Shortener using Docker
-                </td>
-              </tr>
-              <tr>
-                <td>2</td>
-                <td>Presentation on the progress of the final project</td>
-              </tr>
-            </tbody>
-          </table>
-        </section>
+          <section id="november">
+            <h2>Summary of Activities in November</h2>
+            <table border="1" cellspacing="0" cellpadding="5" class="box">
+              <thead>
+                <tr>
+                  <th>NO</th>
+                  <th>Activity</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <td>1</td>
+                  <td>
+                    Continuing to create the API for the Final Project URL
+                    Shortener using Docker
+                  </td>
+                </tr>
+                <tr>
+                  <td>2</td>
+                  <td>Presentation on the progress of the final project</td>
+                </tr>
+              </tbody>
+            </table>
+          </section>
 
-        <section id="desember">
-          <h2>Summary of Activities in December</h2>
-          <table>
-            <thead>
-              <tr>
-                <th>NO</th>
-                <th>Activity</th>
-              </tr>
-            </thead>
-            <tbody>
-              <tr>
-                <td>1</td>
-                <td>
-                  Continuing to create the API for the Final Project URL
-                  Shortener using Docker
-                </td>
-              </tr>
-              <tr>
-                <td>2</td>
-                <td>Final project presentation</td>
-              </tr>
-            </tbody>
-          </table>
+          <section id="desember">
+            <h2>Summary of Activities in December</h2>
+            <table border="1" cellspacing="0" cellpadding="5" class="box">
+              <thead>
+                <tr>
+                  <th>NO</th>
+                  <th>Activity</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <td>1</td>
+                  <td>
+                    Continuing to create the API for the Final Project URL
+                    Shortener using Docker
+                  </td>
+                </tr>
+                <tr>
+                  <td>2</td>
+                  <td>Final project presentation</td>
+                </tr>
+              </tbody>
+            </table>
+          </section>
         </section>
       </section>
       <section id="projects">
-        <h2>Projects</h2>
+        <h2 class="subtitle">Projects</h2>
+        <section class="projects-container">
+          <a
+            href="https://zdev2.github.io/shortlink"
+            class="project-content box"
+          >
+            <h2>DND Shortlink</h2>
+            <p>
+              This project provides a robust URL shortening service that allows
+              users to generate custom or random short URLs, manage expiration
+              dates, track click analytics, and utilize user authentication for
+              secure access.
+            </p>
+          </a>
+          <a
+            href="https://zdev2.github.io/toko-retail"
+            class="project-content box"
+          >
+            <h2>TokoRetail</h2>
+            <p>
+              This system is designed to streamline and manage the operations of
+              retail stores efficiently.
+            </p>
+          </a>
+        </section>
+      </section>
+      <section id="documentation">
+        <h2 class="subtitle">Documentation</h2>
+        <section class="documentation-container">
+          <img src="./src/img/1.jpg" alt="" class="box" />
+          <img src="./src/img/2.jpg" alt="" class="box" />
+          <img src="./src/img/3.jpeg" alt="" class="box" />
+          <img src="./src/img/4.jpg" alt="" class="box" />
+          <img src="./src/img/5.jpg" alt="" class="box" />
+          <img src="./src/img/6.jpg" alt="" class="box" />
+          <img src="./src/img/7.jpg" alt="" class="box" />
+          <img src="./src/img/8.jpg" alt="" class="box" />
+        </section>
       </section>
     </main>
     <script type="module" src="src/js/global-script.js"></script>
